# MotorDrive

./: .gitmodules  CMakeLists.txt
Application/: homing.c  homing.h  state_machine.c  state_machine.h  sys_cfg.c  sys_cfg.h  task.c  task.h  trajectory.c  trajectory.h
Middleware/Algorithm/: controller.c  controller.h  sin_table.h
Tests/: CMakeLists.txt  controller_test.cpp  homing_test.cpp  state_machine_test.cpp  trajectory_test.cpp
